Position::findParent() should take a reference https://bugs.webkit.org/show_bug.cgi?id=146038

Reviewed by Darin Adler.

* dom/Position.cpp:
(WebCore::Position::containerNode):
(WebCore::Position::parentAnchoredEquivalent):
Pass a reference; there is already a null check.
(WebCore::Position::previous):
Add a missing null check. Code below this expects that node is non-null.
(WebCore::Position::next):
Ditto.
(WebCore::Position::atStartOfTree):
(WebCore::Position::atEndOfTree):
Pass a reference.
(WebCore::Position::findParent):
Changed to take a reference.

* dom/Position.h:
Ditto.

Canonical link: https://commits.webkit.org/164135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185682 268f45cc-cd09-0410-ab3c-d52691b4dbfc