Source/WebCore/dom/Position.cpp
@@ -162,7 +162,7 @@ Node* Position::containerNode() const
         return m_anchorNode.get();
     case PositionIsBeforeAnchor:
     case PositionIsAfterAnchor:
-        return findParent(m_anchorNode.get());
+        return findParent(*m_anchorNode);
     }
     ASSERT_NOT_REACHED();
     return nullptr;
@@ -222,7 +222,7 @@ Position Position::parentAnchoredEquivalent() const
     
     // FIXME: This should only be necessary for legacy positions, but is also needed for positions before and after Tables
     if (m_offset <= 0 && (m_anchorType != PositionIsAfterAnchor && m_anchorType != PositionIsAfterChildren)) {
-        if (findParent(m_anchorNode.get()) && (editingIgnoresContent(m_anchorNode.get()) || isRenderedTable(m_anchorNode.get())))
+        if (findParent(*m_anchorNode) && (editingIgnoresContent(m_anchorNode.get()) || isRenderedTable(m_anchorNode.get())))
             return positionInParentBeforeNode(m_anchorNode.get());
         return Position(m_anchorNode.get(), 0, PositionIsOffsetInAnchor);
     }
@@ -310,6 +310,9 @@ Position Position::previous(PositionMoveType moveType) const
 
     if (anchorType() == PositionIsBeforeAnchor) {
         node = containerNode();
+        if (!node)
+            return *this;
+
         offset = computeOffsetInContainerNode();
     }
 
@@ -332,7 +335,7 @@ Position Position::previous(PositionMoveType moveType) const
         }
     }
 
-    ContainerNode* parent = findParent(node);
+    ContainerNode* parent = findParent(*node);
     if (!parent)
         return *this;
 
@@ -360,6 +363,9 @@ Position Position::next(PositionMoveType moveType) const
 
     if (anchorType() == PositionIsAfterAnchor) {
         node = containerNode();
+        if (!node)
+            return *this;
+
         offset = computeOffsetInContainerNode();
     }
 
@@ -376,7 +382,7 @@ Position Position::next(PositionMoveType moveType) const
         return createLegacyEditingPosition(node, (moveType == Character) ? uncheckedNextOffset(node, offset) : offset + 1);
     }
 
-    ContainerNode* parent = findParent(node);
+    ContainerNode* parent = findParent(*node);
     if (!parent)
         return *this;
 
@@ -478,7 +484,7 @@ bool Position::atStartOfTree() const
         return true;
 
     Node* container = containerNode();
-    if (container && findParent(container))
+    if (container && findParent(*container))
         return false;
 
     switch (m_anchorType) {
@@ -503,7 +509,7 @@ bool Position::atEndOfTree() const
         return true;
 
     Node* container = containerNode();
-    if (container && findParent(container))
+    if (container && findParent(*container))
         return false;
 
     switch (m_anchorType) {
@@ -938,9 +944,9 @@ bool Position::nodeIsUserSelectNone(Node* node)
     return node && node->renderer() && node->renderer()->style().userSelect() == SELECT_NONE;
 }
 
-ContainerNode* Position::findParent(const Node* node)
+ContainerNode* Position::findParent(const Node& node)
 {
-    return node->nonShadowBoundaryParentNode();
+    return node.nonShadowBoundaryParentNode();
 }
 
 #if ENABLE(USERSELECT_ALL)
